# tikulocal

./: .gitignore  API接口文档.md  CHANGELOG.md  Cargo.toml  README.md  check_db.py  go.mod  go.sum  index.html  main.go  main.py  main_test.go  models.go  package.json  parse_answers_to_json.py  parser.go  parser.py  pixi.toml  pnpm-lock.yaml  questions.db  requirements.txt  reset_db.py  run.bat  test_import.json  tikulocal.spec  vite.config.ts
.github/workflows/: build-direct.yml  build-simple.yml  build.yml  ci.yml  debug-build.yml  dependencies.yml  dependencies.yml.bak  parser-tests.yml  parser-tests.yml.bak  release.yml
docs/: API.md  API接口文档.md  DISPLAY_IMPROVEMENT.md  DRAG_DROP_FIX.md  FONT_CONFIG.md  GITHUB_ACTIONS.md  OPTIMIZATION.md  PROJECT_STRUCTURE.md  README.md  test_cards.md  test_drag_drop.md  test_font.md  开发指南.md  项目结构说明.md
docs/reference/: answer2.txt  answer2_parsed.json  answers.txt  answers_linus.json  api_format.json
fonts/: README.md
reference/: answer2_api_format.json  api_format.json  parsed_answers.json
refference/: main.go
scripts/data-processing/: convert_to_api_format.py  parse_answer2_to_json.py
scripts/python/: check_db.py
scripts/tests/: README.md  run_all_tests.py  test_performance.py  (+2 more)
src/: db.rs  handlers.rs  main.rs  main.ts  models.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  parser.rs  server.rs
static/: index.html
test/: run_tests.bat  test_parser.go  verify_fix.go
tests/: __init__.py  requirements.txt  test_file_parsing.py
(+1 files in other folders)
